--- a/q/274348.html
+++ b/q/274348.html
@@ -26,23 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>020</td><td>JCram</td><td>240724T094205Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274398#274398">Kamila S</a></td></tr>
-<tr d-ix="1"><td>4824</td><td>Nibbles</td><td>240724T090030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274395#274395">Dominic </a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Nibbles</td><td>240724T090030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274395#274395">Dominic </a></td></tr>
+<tr d-ix="1"><td>020</td><td>JCram</td><td>240724T094205Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274398#274398">Kamila S</a></td></tr>
 <tr d-ix="2"><td>1275</td><td>Vyxal</td><td>240723T104002Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274349#274349">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 20 bytes (SBCS).</h2>
-<pre><code>②π:²⍤¯⍀⍛²l②%⏚6¤Ⓕ⑧⍲Ⓥ⍢
-</code></pre>
-<p>Encodes the following ES6 program:</p>
-<pre><code>n=&gt;{for(s='',i=0;++i&lt;100**n.length;s+=(i%5?f||i:f+'Buzz'))f=i%3?'':'Fizz';return s.includes(n)}
-</code></pre>
-<p>Uses a similar idea to Dominic van Essen's answer.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, <s>49</s> 48 nibbles (24 bytes)</h1>
+<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, <s>49</s> <s>48</s> 47 nibbles (23.5 bytes)</h1>
 <p><em>Edit: -1 nibble and bug-fix thanks to I4m2</em></p>
-<pre><code>&lt;&lt;`% +.,^;@,$ or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@
+<pre><code>&lt;&lt;% +.,^;@,$ or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN7VsbBJUFbT1dOLqtI3rFPKLrOJ061RVjJXcMquqlMBsUyWnUiDbAaIDqnFLtFIMWI2hsaEJiI5RUoqFygEA" rel="nofollow noreferrer">Attempt a version of this Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWNzVtbFQVtPV04uq0jesU8ous4nTrVFWMldwyq6qUwGxTJadSINsBogGqb0u0UgxYjaGxoQmIjlFSioXKAQA" rel="nofollow noreferrer">Attempt a version of this Online!</a></p>
 <p>Outputs a non-empty list (truthy by <code>if/else</code>) if the input is a substring of FizzBuzz, or an empty list (falsy by <code>if/else</code>) if it is not.  <a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN3V0dRJUFbT1dOLqtI3rFPKLrOJ061RVjJXcMquqlMBsUyWnUiDbQaUOogeqdUu0UgxYlaGxoQmIjlFSioXKAQA" rel="nofollow noreferrer">Two nibbles longer</a> to output nonzero or zero (also truthy &amp; falsy).<br />
 Searches the first 1000^length elements of the FizzBuzz sequence for the input string.  The link above exchanges this for 10^4 elements in order to run more quickly for longer input strings.</p>
 <p>The double string <code>&quot;Fizz&quot;&quot;Buzz&quot;</code> alone uses up <a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWa5TcMquqlJScSoEkRAgqA1MBAA" rel="nofollow noreferrer">9.5 bytes</a> here, so <a href="https://github.com/Vyxal/Vyxal/blob/version-2/documents/knowledge/elements.md#kf-fizzbuzz" rel="nofollow noreferrer">languages with a &quot;FizzBuzz&quot; built-in</a> have a definite advantage!</p>
@@ -53,8 +45,8 @@ So here we use a (1-nibble) longer version :<br />
 <code>$or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@</code> = <a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWe1Xyi6zidOtUVYyV3DKrqpTAbFMlp1Ig2wGiBqoUpgUA" rel="nofollow noreferrer">37 nibbles (18.5 bytes)</a><br />
 This doesn't use implicit variables, so can end-up 1-nibble shorter as part of a longer program, if this is carefully constructed.</p>
 <p>The rest of the program works as follows:</p>
-<pre><code>&lt;&lt;`% +.,^;@,$ or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@   # full program
-&lt;&lt;`% +.,^;@,$ or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@$ # with implicit variable shown
+<pre><code>&lt;&lt; % +.,^;@,$ or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@   # full program
+&lt;&lt; % +.,^;@,$ or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@$ # with implicit variable shown
            ,$                                # length of input
         ^;@                                  # 1000 to the power of that
        ,                                     # range from 1..that
@@ -70,9 +62,17 @@ This doesn't use implicit variables, so can end-up 1-nibble shorter as part of a
                                              #   2nd arg:
                                          @   #     i
      +                                       # now, flatten it all into one string,
-  `%                                      $  # split it on the input,
+   %                                      $  # split it on the input,
 &lt;&lt;                                           # and discard the last element.
 </code></pre>
+</div>
+<div id="pu1" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 20 bytes (SBCS).</h2>
+<pre><code>②π:²⍤¯⍀⍛²l②%⏚6¤Ⓕ⑧⍲Ⓥ⍢
+</code></pre>
+<p>Encodes the following ES6 program:</p>
+<pre><code>n=&gt;{for(s='',i=0;++i&lt;100**n.length;s+=(i%5?f||i:f+'Buzz'))f=i%3?'':'Fizz';return s.includes(n)}
+</code></pre>
+<p>Uses a similar idea to Dominic van Essen's answer.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 102 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 12.75 bytes</h1>
 <pre><code>L↵↵ƛ₍₃₅kF½*∑∴;ṅ$c
