--- a/q/274348.html
+++ b/q/274348.html
@@ -26,11 +26,83 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>Nibbles</td><td>240724T090030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274395#274395">Dominic </a></td></tr>
-<tr d-ix="1"><td>020</td><td>JCram</td><td>240724T094205Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274398#274398">Kamila S</a></td></tr>
-<tr d-ix="2"><td>1275</td><td>Vyxal</td><td>240723T104002Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274349#274349">lyxal</a></td></tr>
+<tr d-ix="0"><td>229</td><td>Charcoal</td><td>240724T132004Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274406#274406">Neil</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>Nibbles</td><td>240724T090030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274395#274395">Dominic </a></td></tr>
+<tr d-ix="2"><td>020</td><td>JCram</td><td>240724T094205Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274398#274398">Kamila S</a></td></tr>
+<tr d-ix="3"><td>1275</td><td>Vyxal</td><td>240723T104002Z</td><td><a href="https://codegolf.stackexchange.com/questions/274348/substring-of-fizzbuzz/274349#274349">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, <s>49</s> <s>48</s> 47 nibbles (23.5 bytes)</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 229 bytes</h1>
+<pre><code>≔⪪”{⊟“MJ[↶=⁻]⁷Ｘ”⁸υ≔⭆θ›ι9η¿⬤⌕Ａη10Ｉ§θ⊕ι¿№η01¿№η10¿‹⌕η10⌈⌕Ａη01«≔⌈⪪η1ζ≔⌕ηζε≔✂θε⁺εＬζ¹ζＦ¬﹪Ｉζ³≔∕ζ²ζ№⭆ΦＥθ⁺κ⁻Ｉζε›ι⁰∨⭆υ×…λ⁴¬﹪ι⁺³⊗μιθ»≡﹪Ｉ§θ⊖⌕η1⁵¦⁰ω³⁼⌈υΦθ›ι9⁴№υΦθ›ι9⁼FizzΦθ›ι9≡﹪Σθ⁵¦⁰ω³¬⌕⌈υΦθ›ι9⁴⊙υ¬⌕ιΦθ›λ9¬⌕FizzΦθ›ι9¿№η10⊙υ¬⌕⮌ι⮌Φθ›λ9⊙υ№ιΦθ›λ9
+</code></pre>
+<p><a href="https://tio.run/##jVRhb5swEP2@X2HxyUielCyd1q2fsmSZKjVbte4PeHAJpxmTYDttmfbb2dlAIAtqgwSY49579@4wSSbLpJCqrufG4Fbzh51Cy6MVVtVn15x@HQl2HQvm4ps3XaItUW/Xcsf3gn0tQVooOQoWfYxiyswoEzeMz5XiK9Spv2f0djqJ6O1CGsvn9lan8OTxtzopIQdtIeUY@4N58KJw2gbYZBqdxTxVE7sDY4LKQGItnzB3@Yl4YCHMn85El9S4DuBQfdX77GgrCsPAvsIEfOkg2L1yhtP9DvTWZrzyDNOWZVOUjH8rLF8XqVMFD84918wX0pIt8YAp8Eqwdy3snpprW699p1eofJfbpgfZ3@QUNS2OxBB7/cFEJv75ezngcYL9xBwI9JwoWGTFjivBrihtUCm2CjPBloX7pWg0eRgNpaG/7GMq9C8DZYCZR7RJxk5cDua7hH6@/Zyihux9mEgiiWbyiTXOH4k6RGZd5MveSWWOE3MEbNsx8v3FHfyqgzetdK@BUthIp@x/olG7BV7GjrfigYrdX@zS9z806FKfZ0bn@tnbPBLhGF71@HPTR@gltnvfY5tzvKQfcIDSAO10wbr1yzWSStA44WvEXvN3U9fhD/bhuvunTeu3B/UP" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Deliberately not brute force.</p>
+<pre><code>≔⪪”...”⁸υ
+</code></pre>
+<p>Start by getting the strings <code>FizzBuzz</code> and <code>BuzzFizz</code> into a list, as they get used a lot.</p>
+<pre><code>≔⭆θ›ι9η
+</code></pre>
+<p>Identify which of the characters are letters and which are digits.</p>
+<pre><code>¿⬤⌕Ａη10Ｉ§θ⊕ι
+</code></pre>
+<p>Check that no digit that follows a letter is a <code>0</code>.</p>
+<pre><code>¿№η01
+</code></pre>
+<p>If there is at least one letter following a digit:</p>
+<pre><code>¿№η10
+</code></pre>
+<p>If there is at least one digit following a letter:</p>
+<pre><code>¿‹⌕η10⌈⌕Ａη01«
+</code></pre>
+<p>If the digit is surrounded by letters:</p>
+<pre><code>≔⌈⪪η1ζ≔⌕ηζε≔✂θε⁺εＬζ¹ζ
+</code></pre>
+<p>Find the longest number in the input and its position.</p>
+<pre><code>Ｆ¬﹪Ｉζ³≔∕ζ²ζ
+</code></pre>
+<p>If it's a multiple of <code>3</code> then take the first half.</p>
+<pre><code>№⭆ΦＥθ⁺κ⁻Ｉζε›ι⁰∨⭆υ×…λ⁴¬﹪ι⁺³⊗μιθ
+</code></pre>
+<p>Generate FizzBuzz in the vicinity of that number and see whether that contains the input.</p>
+<pre><code>»≡﹪Ｉ§θ⊖⌕η1⁵
+</code></pre>
+<p>Otherwise, we have leading and trailing digits with letters in between. First, look at the last leading digit.</p>
+<pre><code>⁰ω
+</code></pre>
+<p>If it's <code>0</code> or <code>5</code> then this is impossible.</p>
+<pre><code>³⁼⌈υΦθ›ι9
+</code></pre>
+<p>If it's <code>3</code> or <code>8</code> then the letters must spell <code>FizzBuzz</code> (e.g. between 8 and 11).</p>
+<pre><code>⁴№υΦθ›ι9
+</code></pre>
+<p>If it's <code>4</code> or <code>9</code> then the letters must spell either <code>FizzBuzz</code> (e.g. between 14 and 16) or <code>BuzzFizz</code> (e.g. between 4 and 7).</p>
+<pre><code>⁼FizzΦθ›ι9
+</code></pre>
+<p>Otherwise the letters must spell <code>Fizz</code>.</p>
+<pre><code>≡﹪Σθ⁵
+</code></pre>
+<p>Otherwise we just have leading digits. Look at the last leading digit again.</p>
+<pre><code>⁰ω
+</code></pre>
+<p>If it's <code>0</code> or <code>5</code> then this is impossible.</p>
+<pre><code>³¬⌕⌈υΦθ›ι9
+</code></pre>
+<p>If it's <code>3</code> or <code>8</code> then the letters must be a prefix of <code>FizzBuzz</code>.</p>
+<pre><code>⁴⊙υ¬⌕ιΦθ›λ9
+</code></pre>
+<p>If it's <code>4</code> or <code>9</code> then the letters must be a prefix of <code>FizzBuzz</code> or <code>BuzzFizz</code>.</p>
+<pre><code>¬⌕FizzΦθ›ι9
+</code></pre>
+<p>Otherwise the letters must be a prefix of <code>Fizz</code>.</p>
+<pre><code>¿№η10
+</code></pre>
+<p>Otherwise if there are letters followed by digits:</p>
+<pre><code>⊙υ¬⌕⮌ι⮌Φθ›λ9
+</code></pre>
+<p>Check that the letters are a suffix of <code>FizzBuzz</code> or <code>BuzzFizz</code>.</p>
+<pre><code>⊙υ№ιΦθ›λ9
+</code></pre>
+<p>Otherwise if there are letters then they must be a substring of <code>FizzBuzz</code> or <code>BuzzFizz</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, <s>49</s> <s>48</s> 47 nibbles (23.5 bytes)</h1>
 <p><em>Edit: -1 nibble and bug-fix thanks to I4m2</em></p>
 <pre><code>&lt;&lt;% +.,^;@,$ or:^-~%$3&quot;Fizz&quot;^-~%$5&quot;Buzz&quot;@
 </code></pre>
@@ -66,7 +138,7 @@ This doesn't use implicit variables, so can end-up 1-nibble shorter as part of a
 &lt;&lt;                                           # and discard the last element.
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 20 bytes (SBCS).</h2>
+<div id="pu2" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 20 bytes (SBCS).</h2>
 <pre><code>②π:²⍤¯⍀⍛²l②%⏚6¤Ⓕ⑧⍲Ⓥ⍢
 </code></pre>
 <p>Encodes the following ES6 program:</p>
@@ -74,7 +146,7 @@ This doesn't use implicit variables, so can end-up 1-nibble shorter as part of a
 </code></pre>
 <p>Uses a similar idea to Dominic van Essen's answer.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 102 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 12.75 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 102 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 12.75 bytes</h1>
 <pre><code>L↵↵ƛ₍₃₅kF½*∑∴;ṅ$c
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiTOKGteKGtcab4oKN4oKD4oKFa0bCvSriiJHiiLQ74bmFJGMiLCIiLCJ6Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
