--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240724T144457Z
+"   /golfscore                                      20240724T144909Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/49854.html">Largest and smallest values from concatenated in: 0049854</a>
+<a href="q/82294.html">Faro shuffle an array                           : 0082294</a>
 <a href="q/274389.html">Reduce a string up to idempotency               : 0274389</a>
 <a href="q/274348.html">Substring of Fizzbuzz                           : 0274348</a>
 <a href="q/17342.html">Verify Brainfuck program                        : 0017342</a>
