--- a/q/17342.html
+++ b/q/17342.html
@@ -26,23 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>JCram</td><td>240724T134902Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/274409#274409">Kamila S</a></td></tr>
-<tr d-ix="1"><td>010</td><td>Vyxal</td><td>211225T121254Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/240150#240150">lyxal</a></td></tr>
-<tr d-ix="2"><td>272</td><td>Turing Machine Code</td><td>150921T002151Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/58363#58363">SuperJed</a></td></tr>
-<tr d-ix="3"><td>011</td><td>Stax</td><td>180409T134224Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/161637#161637">Weijun Z</a></td></tr>
-<tr d-ix="4"><td>159</td><td>Haskell</td><td>140103T221059Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/17385#17385">jgon</a></td></tr>
-<tr d-ix="5"><td>025</td><td>Pyth</td><td>180409T191016Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/161672#161672">hakr14</a></td></tr>
-<tr d-ix="6"><td>104</td><td>Hassium</td><td>150920T011442Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/58318#58318">Jacob Mi</a></td></tr>
-<tr d-ix="7"><td>5958</td><td>Ruby</td><td>140103T212626Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/17375#17375">daniero</a></td></tr>
+<tr d-ix="0"><td>023</td><td>Uiua</td><td>240724T165636Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/274415#274415">nyxbird</a></td></tr>
+<tr d-ix="1"><td>013</td><td>JCram</td><td>240724T134902Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/274409#274409">Kamila S</a></td></tr>
+<tr d-ix="2"><td>010</td><td>Vyxal</td><td>211225T121254Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/240150#240150">lyxal</a></td></tr>
+<tr d-ix="3"><td>272</td><td>Turing Machine Code</td><td>150921T002151Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/58363#58363">SuperJed</a></td></tr>
+<tr d-ix="4"><td>011</td><td>Stax</td><td>180409T134224Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/161637#161637">Weijun Z</a></td></tr>
+<tr d-ix="5"><td>159</td><td>Haskell</td><td>140103T221059Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/17385#17385">jgon</a></td></tr>
+<tr d-ix="6"><td>025</td><td>Pyth</td><td>180409T191016Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/161672#161672">hakr14</a></td></tr>
+<tr d-ix="7"><td>104</td><td>Hassium</td><td>150920T011442Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/58318#58318">Jacob Mi</a></td></tr>
+<tr d-ix="8"><td>5958</td><td>Ruby</td><td>140103T212626Z</td><td><a href="https://codegolf.stackexchange.com/questions/17342/verify-brainfuck-program/17375#17375">daniero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 13 bytes.</h2>
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 23 bytes</h1>
+<pre><code>⍤./↧=0⊂⊢⇌:&lt;0.\+-∩=@],@[
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__ZiDihpAg4o2kLi_ihqc9MOKKguKKouKHjDo8MC5cKy3iiKk9QF0sQFsKZiAiK1stPF1bWy1dPjxdIgpmICJbW11dIgpmICJbXVtdIgojIGYgIltbXT0iCiMgZiAiXVtdWyIK" rel="nofollow noreferrer">Try it!</a></p>
+</div>
+<div id="pu1" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 13 bytes.</h2>
 <pre><code>5,⍥ψ⍺⍘ⒼιV⍣b⍐B
 </code></pre>
 <p>Encodes the ES6 program</p>
 <pre><code>f=s=&gt;(t=s.replace(/\[\]|[^\[\]]/g,''))==s?!s:f(t)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 10 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 10 bytes</h1>
 <pre><code>‛[]↔øβ¬[°*
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/#WyIiLCIiLCLigJtbXeKGlMO4zrLCrFvCsCoiLCIiLCJhYltjY2RdXSJd" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -54,7 +60,7 @@
        [°* # if so, multiply the input by the imaginary number `i`. Obviously you can't multiply a string by an imaginary number in python, so this errors.
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Turing Machine Code, <s>286</s> 272 bytes</h1>
+<div id="pu3" class="pu"><h1>Turing Machine Code, <s>286</s> 272 bytes</h1>
 <p>Again, I'm using the rule table syntax defined <a href="http://morphett.info/turing/turing.html" rel="nofollow noreferrer">here.</a></p>
 <pre><code>0 * * l 1
 1 _ ! r Q
@@ -85,7 +91,7 @@ Q * * * W
 </code></pre>
 <p>Terminates in state <code>halt</code> to accept the input and <code>halt-r</code> to reject it.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <s>14</s> 11 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">characters</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <s>14</s> 11 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">characters</a></h1>
 
 <pre><code>╬Äτ↔EªÉs «Ü
 </code></pre>
@@ -101,7 +107,7 @@ Q * * * W
 
 <p>Remove all characters except <code>[]</code>, then remove <code>[]</code> until the string no longer changes. Return <code>1</code> if the final string is empty.</p>
 </div>
-<div id="pu4" class="pu"><h1>Haskell (<s>167</s>,159)</h1>
+<div id="pu5" class="pu"><h1>Haskell (<s>167</s>,159)</h1>
 
 <p>Did this mostly for fun, if anyone's got any suggestions for how to make it shorter, I'd be glad to hear them tho :)</p>
 
@@ -114,7 +120,7 @@ main=getContents&gt;&gt;=(return.all (&gt;=0).scanl (\v-&gt;p (v-1) (v+1).(==']'
 
 <p><strong>Edit 2:</strong> Created auxiliary function for testing predicates using guards inspired by user13350, removing 8 bytes.</p>
 </div>
-<div id="pu5" class="pu"><h2>Pyth, 25 bytes</h2>
+<div id="pu6" class="pu"><h2>Pyth, 25 bytes</h2>
 <pre><code>Ilzv::z&quot;[^[\]]&quot;k&quot;]\[&quot;&quot;],[
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/3zOnqszKqkopOi46JjZWKVspNiZaSSlWJ/r//@jYaCACEbGxAA" rel="nofollow noreferrer">Try it online!</a></p>
@@ -125,14 +131,14 @@ if len(z):
  print(eval(re.sub(&quot;]\[&quot;,&quot;],[&quot;,re.sub(&quot;[^[\]]&quot;,&quot;&quot;,z))))
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="http://HassiumLang.com" rel="nofollow">Hassium</a>, 104 Bytes</h1>
+<div id="pu7" class="pu"><h1><a href="http://HassiumLang.com" rel="nofollow">Hassium</a>, 104 Bytes</h1>
 
 <pre><code>func main(){l=0;r=0;b=input();foreach (c in b){if(c=="[")l++;if(c=="]")r++;}if(!(r==l))exit(1);exit(0);}
 </code></pre>
 
 <p>Full expanded (note doesn't work in online interpreter as input() is disabled) <a href="http://HassiumLang.com/Hassium/index.php?code=9cf346041c25db840d8b611b82313988" rel="nofollow">here</a></p>
 </div>
-<div id="pu7" class="pu"><h1>Ruby, <del>59</del> 58</h1>
+<div id="pu8" class="pu"><h1>Ruby, <del>59</del> 58</h1>
 
 <p>Scans for opening and closing bracket, counting <code>[</code> as 1 and <code>]</code> as -1, and  exits if the count drops below 0.</p>
 
