--- a/q/49854.html
+++ b/q/49854.html
@@ -45,10 +45,10 @@
 <tr d-ix="16"><td>099</td><td>Python 2</td><td>150508T225144Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49857#49857">sirperci</a></td></tr>
 <tr d-ix="17"><td>098</td><td>Haskell</td><td>150508T234652Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49859#49859">nimi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>96</s> 95 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>a=scan();`+`=sort;range(combn(rep(a,L),L&lt;-sum(a|1),function(x)Reduce(paste0,x[!sum(+x-+a)]),F))
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>96</s>  95 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>a=scan();`+`=sort;range(combn(rep(a,L),L&lt;-sum(a|1),function(x)Reduce(paste0,x[all(+x==+a)]),F))
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72waMHKNAUbXYUYDc3qpaUlaboWN-MTbYuTE_M0NK0TtBNsi_OLSqyLEvPSUzWS83OT8jSKUgs0EnV8NHV8bHSLS3M1EmsMNXXSSvOSSzLz8zQqNINSU0qTUzUKEotLUg10KqIVQYq0K3S1EzVjNXXcNDUh1uys5UrTUNDkMjVVMOWCMhVMzRRMDSDyCxZAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72waMHKNAUbXYUYDc3qpaUlaboWN-MTbYuTE_M0NK0TtBNsi_OLSqyLEvPSUzWS83OT8jSKUgs0EnV8NHV8bHSLS3M1EmsMNXXSSvOSSzLz8zQqNINSU0qTUzUKEotLUg10KqITc3I0tCtsbbUTNWM1ddw0NSHW7KzlStNQ0OQyNVUw5YIyFUzNFEwNIPILFkBoAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>I guess I can justify this rather long golf with the quotation from an unknown author: <em>the verbosity is the price for freedom</em> =).</p>
 <p>This solution is indeed independent from any package. Since the permutation function is not provided in the standard R library, I have constructed all possible permutations with the <code>combn</code> function by taking the excess amount of the list elements and filtering out the combinations with the repetitions of the elements. In the combinations that left, the elements get concatenated and minimum and macimum elements are output.</p>
 </div>
