--- a/q/274322.html
+++ b/q/274322.html
@@ -51,6 +51,13 @@ Or see the <strong><a href="https://tio.run/##AcgAN/9qZWxsef//w5hi4oCcwqJTdOG7pM
            ⁽$ŀ - 10239
           +    - {foundAt} add {10239}
 </code></pre>
+<hr />
+<p>A fairly augmented (for golf purposes) port of <a href="https://codegolf.stackexchange.com/a/274339/53748">Dominic van Essen's Nibbles answer</a> is also 49 bytes (I thought it may come in at less):</p>
+<pre><code>“¦Oŀ&quot;ėO½ı7Y*ỌƲ¤n~3×bḶ£ȯZLȦ~{@o’ḃ;R}ɗ64Q+⁽$ŀɓØbiCị
+</code></pre>
+<p><a href="https://tio.run/##AbIATf9qZWxsef//4oCcwqZPxYAixJdPwr3EsTdZKuG7jMaywqRufjPDl2LhuLbCo8ivWkzIpn57QG/igJnhuIM7Un3JlzY0USvigb0kxYDJk8OYYmlD4buL/yzDh@G7jDskJEZqQOKCrDPCpsOYKEspWf//IjAxMjM0NTY3ODlhYmNkZWZnaGlqa2xtbm9wcXJzdHV2d3h5ei9BQkNERUZHSElKS0xNTk9QUVJTVFVWV1hZWisi" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>This uses base <span class="math-container">\$64\$</span> rather than base <span class="math-container">\$62\$</span> (as the number has the same number of digits but allows reusing the <code>64</code> we need there, rather than having a <code>62</code> in the code too).</p>
+<p>The <code>C</code> at the end gives us the complement of the index of the input character in the base digits <code>Øb</code> to cater for uppercase letters coming first in that list and the compressed list represented by <code>Øb“...’œ?</code> is for the non-uppercase characters of <code>Øb</code> in reverse. This avoids rotating it by <span class="math-container">\$26\$</span> after adding the excess values or subtracting <span class="math-container">\$26\$</span> from the index of the input character in <code>Øb</code>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 83 bytes</h1>
 
